# nuuslees

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  db.rs  main.rs  mode.rs  utils.rs
src/components/: article_list.rs  article_reader.rs  article_view.rs  feed_view.rs  group_view.rs  home.rs  info_bar.rs  infobar.rs  quit_popup.rs  reader.rs  tab_bar.rs  tab_viewer.rs  tabbar.rs
