[package]
name = "nuuslees"
version = "0.1.0"
edition = "2021"
description = "A TUI rss reader."

authors = ["Luke Leppan <lukelepp@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4.5", features = [
	"derive",
	"cargo",
	"wrap_help",
	"unicode",
	"string",
	"unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
html5ever = "0.27.0"
human-panic = "2.0.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
markup5ever_rcdom = "0.3.0"
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
readability = "0.3.0"
reqwest = { version = "0.12.4", features = ["native-tls-vendored"] }
rss = "2.0.8"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
scraper = "0.19.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }
